[gd_scene load_steps=8 format=3 uid="uid://dve1wwmkd0ynm"]

[ext_resource type="Script" path="res://Player/Gladiators/Player.gd" id="1_ds3ra"]
[ext_resource type="Texture2D" uid="uid://gr13ex3fw4lx" path="res://Textures/test/player.png" id="2_omq80"]
[ext_resource type="PackedScene" uid="uid://dr2gmtpibgjy1" path="res://Utility/hit_hurt_box/hurt_box.tscn" id="3_cj848"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e43ux"]
size = Vector2(19, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlks0"]
size = Vector2(128, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_up5oj"]
radius = 65.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwn7n"]
size = Vector2(21, 37)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 37
motion_mode = 1
script = ExtResource("1_ds3ra")

[node name="MechaSprite" type="Sprite2D" parent="."]
position = Vector2(0.5, -5)
scale = Vector2(1.03125, 1.3125)
texture = ExtResource("2_omq80")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MechaCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_e43ux")

[node name="EquippedWeapons" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EquippedAugments" type="Node2D" parent="."]

[node name="UniqueWeapon" type="Node2D" parent="."]

[node name="CollectArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -330)

[node name="CollectShape" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("RectangleShape2D_dlks0")

[node name="GrabArea" type="Area2D" parent="."]

[node name="GrabShape" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_up5oj")

[node name="HurtBox" parent="." instance=ExtResource("3_cj848")]
collision_layer = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1.5, -3.5)
shape = SubResource("RectangleShape2D_uwn7n")

[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]

[editable path="HurtBox"]
